fix timezone offset

--- a/nginx_conf/B2B2C.conf
+++ b/nginx_conf/B2B2C.conf
@@ -18,30 +18,30 @@
 ##
 
 server {
-	listen 443 default_server;
-	listen [::]:443 default_server ipv6only=on;
+	listen 80 default_server;
+	listen [::]:80 default_server ipv6only=on;
 
 
 	# Make site accessible from http://localhost/
 	server_name localhost;
+    root /var/www/static;
 
-    location ~ /(js|images|css|media|fonts)/ {
-        #expires 30d;
+    
+    location ~ /(js|images|css|media|fonts|partials)/|.*\.html$ {
+        expires 1d;
         gzip on;
         gzip_types text/plain application/x-javascript text/css application/xml;
-        root /var/www/gzc-b2b2c-query/public;
     }
 
-	location / {
-        root /var/www/gzc-b2b2c-query/public;
+	location /B2B2C/ {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ @proxy;
+		try_files $uri $uri/ @proxy_bbc;
 		# Uncomment to enable naxsi on this location
 		# include /etc/nginx/naxsi.rules
 	}
     
-    location @proxy {
+    location @proxy_bbc {
         index index.html index.htm;
         proxy_pass http://127.0.0.1:3000;
         proxy_redirect off;
@@ -50,6 +50,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /CheckPointNotice/ {
+        index index.html index.htm;
+        proxy_pass http://127.0.0.1:3001/;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 	#location /doc/ {
 	#	alias /usr/share/doc/;
 	#	autoindex on;
