--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.1",
   "dependencies": {
     "edge": "^0.10.1",
-    "express": "^4.12.2",
-    "q": "^1.2.0"
+    "express": "^4.12.3",
+    "q": "^1.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-mocha-test": "^0.11.0",
-    "should": "^5.1.0"
+    "grunt-contrib-stylus": "^0.21.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^2.2.4",
+    "should": "^6.0.1"
   }
 }
